<resources>
    <string name="app_name">SupportCenter</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_login_in">Login in</string>
    <string name="login_version">Version 1.000.0</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_email_hint">電子信箱</string>
    <string name="login_password_hint">密碼</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="title_activity_option">休假申請</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <array name="option_string">
        <item>補打卡申請</item>
        <item>休假申請</item>
        <item>劃假</item>
        <item>班表確認</item>
        <item>申請紀錄</item>
    </array>

    <array name="option_sex">
        <item>男</item>
        <item>女</item>
    </array>
    <array name="option_clock_reason">
        <item>公務</item>
        <item>忘記打卡</item>
        <item>早退</item>
        <item>其他</item>
    </array>
</resources>